# elimination

./: Click.cs  Cube.tscn  Godot_Elimination.sln  README.md  Root.tscn  index.html  project.godot
.github/workflows/: deploy.yml
elim1/: icons.TIF
elim1/code/: StdAfx.cpp  StdAfx.h  class.h  elim1.cpp  elim1.dsp  elim1.dsw  elim1.h  globals.h  pcPlayer.cpp  pcPlayer.h  pct01.rc  resource.h
elim1/music/: Help.txt
elim2/: description.txt  res.elm  script.txt
elim2/code/: arrowcop.cur  board.cpp  board.h  computer.cpp  computer.h  elim2e.dsp  elim2e.dsw  elimRes.rc  elimres.h  file.cpp  file.h  graph.cpp  graph.h  main.cpp  main.h  sound.cpp  sound.h  window.cpp  window.h
elim2/graphics/: about.xmp  board.xmp  dice.xmp  explode.xmp  intro.xal  intro.xmp  items.xal  items.xmp  menu.xmp  names.xmp  select.xmp
elim2/sounds/: error.xav  explode.xav  free.xav  menu1.xav  menu2.xav  question.xav  select.xav  sink.xav  unallowed.xav
elim3/CodeV1/: computer.cpp  computer.h  elim3.dsp  elim3.dsw  elim3.rc  game.cpp  game.h  network.cpp  network.h  resdef.h  resource.h  sound.cpp  sound.h  user.cpp  user.h  utility.cpp  utility.h  window.cpp  window.h
elim3/CodeV2/: CMakeLists.txt  computer.cpp  computer.h  elim3.rc  elim3b.dsp  elim3b.dsw  file.cpp  file.h  game.cpp  game.h  network.cpp  network.h  resdef.h  sound.cpp  sound.h  user.cpp  user.h  utility.cpp  utility.h  window.cpp  window.h
elim3/CodeV2/compat/: afxres.h  compat_guids.cpp  dmusici.h  dplay.h  dplobby.h
elim3/Scripts/: dialog.txt  elim_res.grc  font.txt  help.txt  tracks.txt
elim3/Sound/: rise.xav
elim3/html/: README.md  index.html
elim3/html/assets/music/: music1.mid  music10.mid  music2.mid  music3.mid  music4.mid  music5.mid  music6.mid  music7.mid  music8.mid  music9.mid
